<?xml version="1.0"?>
<package format="2">
  <name>brio_ros</name>
  <version>0.0.0</version>
  <description>The brio_ros package</description>

  <maintainer email="chaiso.krit@gmail.com">krit</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>usb_cam</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>usb_cam</exec_depend>


  <export>

  </export>
</package>
